fixed overflow of projects column title This fixes that titles of project columns can overflow and push the action menu out of the card, so that interaction is no longer possible.
Fixes #3717

--- a/web_src/css/features/projects.css
+++ b/web_src/css/features/projects.css
@@ -39,6 +39,15 @@
   cursor: inherit;
 }
 
+.project-column-title-label {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.project-column-header > .dropdown {
+  flex-shrink: 0;
+}
+
 .project-column > .cards {
   flex: 1;
   display: flex;
